# metal-engine

./: .gitignore  CMakeLists.txt
metal-cmake/: CMakeLists.txt  definition.cpp
metal-cmake/metal_engine.build/Debug/METAL_CPP.build/Objects-normal/arm64/: METAL_CPP.LinkFileList  definition.d
shaders/: argShader.metal  cameraShader.metal  computeShader.metal  cubemapShader.metal  instanceShader.metal  lightShader.metal  modelShader.metal  simpleShader.metal  textureShader.metal  uniformShader.metal
src/: CMakeLists.txt  app_delegate.cpp  app_delegate.h  main.cpp  mainSDL.cpp  renderer.cpp  renderer.h  view_delegate.cpp  view_delegate.h
src/layers/: imguiLayer.cpp  imguiLayer.hpp
src/oldRenderers/: instanceRenderer.cpp  uniformRenderer.cpp
src/utility/: camera.cpp  camera.hpp  fileIO.cpp  fileIO.h  gizmo.cpp  gizmo.hpp  importUtils.cpp  importUtils.hpp  math.cpp  math.h  mesh.cpp  mesh.h  model.cpp  model.hpp
